--- a/products/templates/products/includes/quantity_input_script.html
+++ b/products/templates/products/includes/quantity_input_script.html
@@ -9,11 +9,11 @@
 
     var allQtyInputs = $('.qty_input');
     for (var i = 0; i < allQtyInputs.length; i++) {
-        var itemId  $(allQtyInputs[i]).data('item_id');
-        handleEnableDisable(itemId)
+        var itemId = $(allQtyInputs[i]).data('item_id');
+        handleEnableDisable(itemId);
     }
 
-    $('.qty_input').change(function() {
+    $('.qty_input').change(function(){
         var itemId = $(this).data('item_id');
         handleEnableDisable(itemId);
     })
